[gd_scene load_steps=22 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Sprites/sprites_settings/fresas_off.png" type="Texture" id=2]
[ext_resource path="res://sounds/clic.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/sprites_buttons/boton_play.png" type="Texture" id=4]
[ext_resource path="res://Sprites/sprites_buttons/boton_exit.png" type="Texture" id=5]
[ext_resource path="res://Fonts/PoetsenOne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sprites/New Piskel (3).png" type="Texture" id=7]
[ext_resource path="res://Sprites/sprites_settings/fresabonus_on.png" type="Texture" id=8]
[ext_resource path="res://Sprites/poppup_settings.png" type="Texture" id=9]
[ext_resource path="res://Ecenas/fps_mb.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/sprites_settings/fresamala_on.png" type="Texture" id=11]
[ext_resource path="res://Sprites/sprites_buttons/icon_settings.png" type="Texture" id=12]
[ext_resource path="res://icons_game/titulo.png" type="Texture" id=13]
[ext_resource path="res://Sprites/sprites_buttons/icon_setting2.png" type="Texture" id=14]
[ext_resource path="res://icons_game/logo_itch.io.png" type="Texture" id=15]
[ext_resource path="res://Sprites/icon_corona.png" type="Texture" id=16]

[sub_resource type="Animation" id=1]
resource_name = "play"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("button_play:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 15, 300 ), Vector2( 145, 300 ), Vector2( 15, 300 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("button_exit:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 145, 500 ), Vector2( 15, 500 ), Vector2( 145, 500 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mensaje:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 39, 750 ), Vector2( 39, 720 ), Vector2( 39, 750 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("titulo:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -99, 15 ), Vector2( -99, 35 ), Vector2( -99, 15 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 26
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 25
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 6 )

[node name="Menu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -400.0
margin_right = 250.0
margin_bottom = 400.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps_mb" parent="." instance=ExtResource( 10 )]
margin_right = 179.0

[node name="settings" type="TextureButton" parent="."]
margin_right = 398.0
margin_bottom = 398.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "play"
anims/play = SubResource( 1 )

[node name="button_play" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -235.0
margin_top = -100.0
margin_right = 443.0
margin_bottom = 262.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_exit" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = 100.0
margin_right = 573.0
margin_bottom = 462.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 24.0

[node name="mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -211.0
margin_top = -50.0
margin_right = 211.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 2 )
text = "¿¡Puedes llegar al score 1000!?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fresa1" type="Sprite" parent="mensaje"]
position = Vector2( -0.346001, 18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="fresa2" type="Sprite" parent="mensaje"]
position = Vector2( 421, 18 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Popup" type="Popup" parent="."]
margin_left = 250.0
margin_top = 400.0
margin_right = 250.0
margin_bottom = 400.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Popup"]
scale = Vector2( 2, 2 )
texture = ExtResource( 9 )

[node name="CheckButton" type="CheckButton" parent="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.76
margin_top = -286.968
margin_right = 23.24
margin_bottom = -233.968
focus_mode = 0
custom_icons/off = ExtResource( 11 )
custom_icons/on_disabled = ExtResource( 2 )
custom_icons/on = ExtResource( 8 )
custom_icons/off_disabled = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.415686, 0.415686, 0.415686, 1 )
custom_colors/font_color_hover = Color( 0.956863, 1, 0.603922, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_constants/hseparation = 15
enabled_focus_mode = 0
text = "Mostrar  FPS  y  MB"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_music" type="CheckButton" parent="Popup"]
margin_left = -159.76
margin_top = -235.062
margin_right = 4.23999
margin_bottom = -182.062
focus_mode = 0
custom_icons/off = ExtResource( 11 )
custom_icons/on_disabled = ExtResource( 2 )
custom_icons/on = ExtResource( 8 )
custom_icons/off_disabled = ExtResource( 2 )
custom_fonts/font = SubResource( 4 )
custom_constants/hseparation = 15
enabled_focus_mode = 0
text = "Música"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="Popup"]
position = Vector2( 0, 250 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 15 )

[node name="sprites_Extras" type="Node2D" parent="."]
position = Vector2( 463.622, 28.9944 )
z_index = -3
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="sprites_Extras"]
self_modulate = Color( 0.968627, 1, 0, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 16 )

[node name="score_coron" type="Label" parent="sprites_Extras"]
margin_left = -46.7722
margin_top = -8.48163
margin_right = 46.2278
margin_bottom = 39.5184
custom_fonts/font = SubResource( 5 )
text = "1000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="titulo" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -349.0
margin_top = 15.0
margin_right = 349.0
margin_bottom = 515.0
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 349, 0 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="button_play" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="button_exit" to="." method="_on_button_exit_pressed"]
[connection signal="toggled" from="Popup/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Popup/quit_music" to="." method="_on_quit_music_toggled"]
